# REMU

./: .envrc  .gitignore  .gitmodules  .tokeignore  AGENTS.md  Cargo.toml  Kconfig  Makefile  README.md  README_zh.md  flake.nix  gource.ini  justfile  layout.excalidraw  rustfmt.toml  waveform.fst  waveform_ysyxsoc.fst  xmake.lua
core/: Cargo.toml  build.rs
core/src/: main.rs
logger/: Cargo.toml
logger/src/: lib.rs  logger.rs
option_parser/: Cargo.toml
option_parser/src/: cli_parser.rs  config_parser.pest  config_parser.rs  lib.rs  main.rs  welcome.rs
remu_app/mnist/mnist_generator/: Cargo.toml
remu_app/mnist/mnist_generator/src/: main.rs
remu_boot/: Cargo.toml
remu_boot/src/: config.rs  lib.rs
remu_cli/: Cargo.toml
remu_cli/src/: compeleter.rs  highlighter.rs  main.rs  prompt.rs  tracer.rs  validator.rs
remu_debugger/: Cargo.toml
remu_debugger/src/: command.rs  command_expr.rs  commands.rs  compound_command.rs  error.rs  lib.rs  option.rs  policy.rs  prelude.rs  run_state.rs
remu_debugger/src/command_expr/: mod.rs  parse.pest
remu_debugger/src/flow/: command.rs  option.rs
remu_debugger/src/prelude/: mod.rs
remu_fmt/: Cargo.toml
remu_fmt/src/: disasm.rs  lib.rs  number.rs
remu_hal/: Cargo.toml  README-targets.md  README.md  README_zh.md  build.rs  memory.x
remu_hal/.cargo/: build-app.sh  config.toml  linker-wrapper.sh
remu_hal/scripts/: remu-cargo-runner.sh
remu_hal/src/: addresses.rs  cpu.rs  exit.rs  heap.rs  lib.rs  print.rs  time.rs  trap.rs  uart.rs
remu_hal/xtask/: Cargo.toml
remu_hal/xtask/src/: cli.rs  disasm.rs  isa_shorthand.rs  lib.rs  main.rs  paths.rs  target.rs  util.rs
remu_hal/xtask/src/commands/: mod.rs  print.rs
remu_harness/: Cargo.toml
remu_harness/src/: command.rs  commands.rs  error.rs  func.rs  isa_dispatch.rs  lib.rs  option.rs  policy.rs  prelude.rs  run_state.rs
remu_harness/src/flow/: mod.rs
remu_options/: Cargo.toml
remu_options/src/: lib.rs
remu_simulator/: Cargo.toml
remu_simulator/benches/: decode.rs
remu_simulator/simulators/nzea/: Cargo.toml  build.rs
remu_simulator/simulators/nzea/c_src/: nzea_wrapper.cpp
remu_simulator/simulators/nzea/src/: dpi.rs  lib.rs  nzea_ffi.rs  nzea_target.rs  simulator_trait.rs  supported_isa.rs
remu_simulator/simulators/remu/: Cargo.toml
remu_simulator/simulators/remu/benches/: decode.rs
remu_simulator/simulators/remu/src/: icache.rs  lib.rs  simulator_trait.rs
remu_simulator/simulators/remu/src/riscv/: mod.rs
remu_simulator/simulators/remu/src/riscv/inst/: bytes.rs  mod.rs
remu_simulator/simulators/remu/src/riscv/opcode/: AUIPC.rs  BRANCH.rs  JAL.rs  JALR.rs  LOAD.rs  LOAD_FP.rs  LUI.rs  MISC_MEM.rs  OP.rs  OP_IMM.rs  STORE.rs  STORE_FP.rs  SYSTEM.rs  UNKNOWN.rs
remu_simulator/simulators/spike/: Cargo.toml  README.md  build.rs
remu_simulator/simulators/spike/src/: difftest_abi.h  ffi.rs  lib.rs  simulator.rs  wrapper.cc
remu_simulator/simulators/unicorn/: Cargo.toml
remu_simulator/simulators/unicorn/src/: lib.rs  simulator.rs
remu_simulator/src/: command.rs  error.rs  func.rs  lib.rs  option.rs  platform_config.rs  policy.rs  prelude.rs  simulator_trait.rs  stat.rs
remu_simulator/src/flow/: generic.rs  option.rs
remu_simulator/src/inst/: AUIPC.rs  BRANCH.rs  JAL.rs  JALR.rs  LOAD.rs  LUI.rs  OP.rs  OP_IMM.rs  STORE.rs  mod.rs
remu_simulator/src/inst/opcode/: AUIPC.rs  BRANCH.rs  JAL.rs  JALR.rs  LOAD.rs  LUI.rs  OP.rs  OP_IMM.rs  STORE.rs  UNKNOWN.rs  mod.rs
remu_simulator/src/riscv/: error.rs  isa.rs  mod.rs  simulator.rs
remu_simulator/src/riscv/inst/: bytes.rs  mod.rs
remu_simulator/src/riscv/inst/opcode/: AUIPC.rs  BRANCH.rs  JAL.rs  JALR.rs  LOAD.rs  LUI.rs  OP.rs  OP_IMM.rs  STORE.rs  UNKNOWN.rs  mod.rs
remu_state/: Cargo.toml
remu_state/benches/: bus_read.rs  bus_write.rs  memory_access.rs
remu_state/benches/common/: mod.rs
remu_state/src/: command.rs  commands.rs  error.rs  lib.rs  machine.rs  memory.rs  options.rs  policy.rs  prelude.rs
remu_state/src/bus/: access.rs  command.rs  elf_loader.rs  error.rs  memory.rs  mod.rs  observer.rs  option.rs  parse.rs
remu_state/src/bus/device/: clint.rs  mod.rs  sifive_test_finisher.rs  uart16550.rs  uart_simple.rs
remu_state/src/bus/flow/: mod.rs  option.rs
remu_state/src/bus/memory/: dcache.rs  elf.rs  entry.rs  mod.rs
remu_state/src/flow/: generic.rs  mod.rs  option.rs
remu_state/src/reg/: command.rs  mod.rs  option.rs  riscv.rs
remu_state/src/reg/flow/: command.rs
remu_state/src/reg/riscv/: csr.rs  mod.rs  riscv_reg.rs
remu_utils/: Cargo.toml
remu_utils/src/: disassembler.rs  error.rs  lib.rs  platform.rs
simple_debugger/: Cargo.toml  build.rs
simple_debugger/src/: cmd_impl.rs  lib.rs  simple_debugger.rs
simple_debugger/src/cmd_parser/: cmd_parser.rs  expr_parser.pest  expr_parser.rs  input_parser.pest  mod.rs  readline.rs  server.rs
simple_debugger/src/cmd_parser/tui/: mod.rs
simple_debugger/src/cmd_parser/tui/user_input/: mod.rs  suggestions.rs
simple_debugger/src/debug/: disassembler.rs  mod.rs
simulator/: Cargo.toml  build.rs  difftest_ffi.h
simulator/ffi/: bindings.rs
simulator/src/: lib.rs  simulator.rs  tracer.rs
simulator/src/difftest_ref/: difftest.rs  difftest_ffi.rs  manager.rs  mod.rs  single_cycle.rs
simulator/src/emu/: debug.rs  difftest_ref.rs  emu.rs  mod.rs  wrapper.rs
simulator/src/emu/isa/: mod.rs
simulator/src/emu/isa/riscv/: address_generation.rs  arithmetic_logic.rs  decoder.rs  direct_map.rs  executer.rs  inst_enum.rs  instruction_decoder.rs  load_store.rs  mod.rs  nemu.rs  parser.rs  patterns.rs  pipeline.rs  singlecycle.rs  trap.rs  write_back.rs
simulator/src/emu/isa/riscv/backend/: address_generation.rs  arithmetic_logic.rs  load_store.rs  mod.rs  write_back.rs
simulator/src/nemu/: mod.rs  nemu.rs
state/: Cargo.toml
state/src/: lib.rs
state/src/cache/: btb.rs  dcache.rs  icache.rs  mod.rs  replacement.rs
state/src/mmu/: device.rs  memory.rs  mmu.rs  mod.rs
state/src/model/: mod.rs
state/src/reg/: mod.rs
state/src/reg/riscv/: common.rs  csr.rs  mod.rs  rv32e.rs  rv32i.rs
(+162 files in other folders)
