[workspace]
resolver = "2"
members = [
    "remu_macro",
    "remu_logger",
    "remu_types",
    "remu_fmt",

    "remu_boot",
    "remu_cli",

    "remu_debugger",
    "remu_harness",

    "remu_simulator",
    "remu_simulator/simulators/remu",
    "remu_simulator/simulators/unicorn",
    "remu_simulator/simulators/spike",

    "remu_state",
]

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true

# Bench-only profile for more informative flamegraphs:
# - keep symbols (`debug = 1`, `strip = "none"`)
# - disable LTO so call stacks don't get flattened as aggressively
[profile.bench]
inherits = "release"
debug = 1
strip = "none"

[workspace.dependencies]
thiserror = "2.0.18"
miette = "7.6.0"
anyhow = "1.0.100"

tracing = "0.1.44"

petgraph = "0.8.3"

clap = "4.5.54"
winnow = "0.7.14"
target-lexicon = "0.13.4"

criterion = "0.5.1"
pprof = "0.15.0"
