[workspace]
resolver = "2"
members = [
    "remu_macro",
    "remu_isa",
    "remu_logger",
    "remu_types",
    "remu_fmt",

    "remu_boot",
    "remu_cli",

    "remu_debugger",
    "remu_harness",

    "remu_simulator",
    "remu_simulator/simulators/remu",
    "remu_simulator/simulators/spike",
    "remu_simulator/simulators/nzea",

    "remu_state",

    "remu_hal",
    "remu_hal/xtask",
    "remu_app/hello_world",
    "remu_app/collection",
    "remu_app/mnist", "remu_app/mnist/mnist_generator",
]

[workspace.lints.rust]
unreachable_pub = "warn"

[profile.release]
codegen-units = 16
lto           = false
opt-level     = 2
panic         = "abort"
incremental   = true

# Bench-only profile for more informative flamegraphs:
# - keep symbols (`debug = 1`, `strip = "none"`)
# - disable LTO so call stacks don't get flattened as aggressively
[profile.bench]
inherits = "release"
debug = 1
strip = "none"

[workspace.dependencies]
thiserror = "2.0.18"
miette = "7.6.0"
anyhow = "1.0.102"

tracing = "0.1.44"

petgraph = "0.8.3"

clap = "4.6.1"
winnow = "1.0.3"
target-lexicon = "0.13.5"

cc = "1.2.62"

rand = "0.10.1"
