[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
option_parser = { path = "../option_parser" }
remu_macro = { path = "../remu_macro" }
simple_debugger = { path = "../simple_debugger" }
logger = { path = "../logger" }
state = { path = "../state" }
snafu = {workspace = true}
log = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-appender = {workspace = true}
tracing-error = {workspace = true}
color-eyre = {workspace = true}
bitflags = {workspace = true}
