[package]
name = "core"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[dependencies]
option_parser = { path = "../option_parser" }
remu_utils = { path = "../remu_utils" }
remu_macro = { path = "../remu_macro" }
simple_debugger = { path = "../simple_debugger" }
logger = { path = "../logger" }
state = { path = "../state" }
snafu = {workspace = true}
log = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-appender = {workspace = true}
tracing-error = {workspace = true}
bitflags = {workspace = true}
tokio = {workspace = true}
cfg-if = {workspace = true}

[build-dependencies]
remu_utils = { path = "../remu_utils" }

[features]
default = []
LOG = []
