[package]
name = "logger"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[dependencies]
remu_macro = { path = "../remu_macro" }
snafu = {workspace = true}
log = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-appender = {workspace = true}
tracing-error = {workspace = true}
owo-colors = {workspace = true}
