[package]
name = "option_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
remu_macro = { path = "../remu_macro" }
logger = { path = "../logger" }
owo-colors = {workspace = true}
snafu = {workspace = true}
clap = {workspace = true}
config = "0.15.11"
cargo = "0.86.0"
install = "0.0.0"
text-to-ascii-art = "0.1.10"
