[package]
name = "option_parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[dependencies]
remu_macro = { path = "../remu_macro" }
remu_utils = { path = "../remu_utils" }
logger = { path = "../logger" }
state = { path = "../state" }
owo-colors = {workspace = true}
snafu = {workspace = true}
clap = {workspace = true}
pest = {workspace = true}
pest_derive = {workspace = true}
config = "0.15.11"
cargo = "0.86.0"
install = "0.0.0"
text-to-ascii-art = "0.1.10"
regex = "1.11.1"
