[package]
name = "remu_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
remu_macro = { path = "../remu_macro" }
remu_logger = { path = "../remu_logger" }
remu_debugger = { path = "../remu_debugger" }
remu_harness = { path = "../remu_harness" }
remu_fmt = { path = "../remu_fmt" }
remu_types = { path = "../remu_types" }

clap = { workspace = true, features = [ "derive", "color" ] }

tracing.workspace = true

anyhow.workspace = true
miette = { workspace = true, features = ["fancy"] }

petgraph.workspace = true

nu-ansi-term = "0.50.3"
reedline = "0.44.0"

tabled = "0.20.0"
colored = "3.1.1"

winnow.workspace = true
cfonts = "1.3.0"
