[package]
name = "remu_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
remu_macro = { path = "../remu_macro" }
remu_logger = { path = "../remu_logger" }
remu_types = { path = "../remu_types" }
remu_fmt = { path = "../remu_fmt" }

remu_debugger = { path = "../remu_debugger" }
remu_simulator = { path = "../remu_simulator" }


tracing.workspace = true

anyhow.workspace = true
miette = { workspace = true, features = ["fancy"] }

petgraph.workspace = true

nu-ansi-term = "0.50.3"
reedline = "0.45.0"

tabled = "0.20.0"
colored = "3.1.1"
cfonts = "1.3.0"

clap = { workspace = true, features = [ "derive", "color" ] }
winnow.workspace = true

target-lexicon.workspace = true
