[package]
name = "remu_debugger"
version = "0.1.0"
edition = "2024"

[dependencies]
remu_macro = { path = "../remu_macro" }
remu_harness = { path = "../remu_harness" }

clap = { workspace = true, features = [ "derive", "color" ] }
shlex = "1.3.0"

thiserror.workspace = true

tracing.workspace = true

petgraph.workspace = true
pest.workspace = true
pest_derive.workspace = true
