[package]
name = "remu_debugger"
version = "0.1.0"
edition = "2024"

[dependencies]
remu_fmt = { path = "../remu_fmt" }
remu_harness = { path = "../remu_harness" }
remu_macro = { path = "../remu_macro" }
remu_state = { path = "../remu_state" }
remu_types = { path = "../remu_types" }

clap = { workspace = true, features = [ "derive", "color" ] }

thiserror.workspace = true
miette = { workspace = true, features = ["fancy"] }

tracing.workspace = true

petgraph.workspace = true
winnow.workspace = true

[lints]
workspace = true
