[package]
name = "remu_fmt"
version = "0.1.0"
edition = "2024"

[dependencies]
remu_isa = { path = "../remu_isa" }
remu_macro = { path = "../remu_macro" }
remu_types = { path = "../remu_types" }
thiserror.workspace = true

tracing.workspace = true

winnow.workspace = true
target-lexicon.workspace = true
capstone = { git = "https://github.com/CodeWenjiu/capstone-rs", branch = "capstone-v6-fix", default-features = false, features = ["full", "arch_riscv"] }

[lints]
workspace = true
