[package]
name = "remu_harness"
version = "0.1.0"
edition = "2024"

[dependencies]
remu_macro = { path = "../remu_macro" }
remu_types = { path = "../remu_types" }
remu_simulator = { path = "../remu_simulator" }
remu_state = { path = "../remu_state" }

clap = { workspace = true, features = [ "derive", "color" ] }

thiserror.workspace = true

tracing.workspace = true
