[package]
name = "remu_harness"
version = "0.1.0"
edition = "2024"

[dependencies]
remu_state = { path = "../remu_state" }
remu_types = { path = "../remu_types" }
remu_macro = { path = "../remu_macro" }

remu_simulator = { path = "../remu_simulator" }
remu_simulator_remu = { path = "../remu_simulator/simulators/remu" }

clap = { workspace = true, features = [ "derive", "color" ] }
