[package]
name = "remu_options"
version = "0.1.0"
edition = "2024"

[dependencies]
remu_macro = { path = "../remu_macro" }
remu_logger = { path = "../remu_logger" }

remu_simulator = { path = "../remu_simulator" }

clap = { workspace = true, features = [ "derive", "color" ] }

thiserror.workspace = true

tracing.workspace = true
