[package]
name = "remu_state"
version = "0.1.0"
edition = "2024"

[dependencies]
remu_macro = { path = "../remu_macro" }
remu_types = { path = "../remu_types" }
remu_fmt = { path = "../remu_fmt" }
thiserror.workspace = true
tracing.workspace = true

clap = { workspace = true, features = [ "derive", "color" ] }

[dev-dependencies]
criterion.workspace = true
pprof = { workspace = true, features = [ "criterion", "flamegraph" ] }

[[bench]]
name = "memory_access"
harness = false # 必须关掉默认 harness
