[package]
name = "remu_state"
version = "0.1.0"
edition = "2024"

[dependencies]
remu_isa = { path = "../remu_isa" }
remu_macro = { path = "../remu_macro" }
remu_types = { path = "../remu_types" }
remu_fmt = { path = "../remu_fmt" }

thiserror.workspace = true
tracing.workspace = true

clap = { workspace = true, features = [ "derive", "color" ] }
object = { version = "0.39.1", default-features = false, features = ["read_core", "elf"] }

[lints]
workspace = true
