[package]
name = "simple_debugger"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[dependencies]
remu_macro = { path = "../remu_macro" }
remu_utils = { path = "../remu_utils" }
logger = { path = "../logger" }
option_parser = { path = "../option_parser" }
state = { path = "../state" }
simulator = { path = "../simulator" }
owo-colors = {workspace = true}
snafu = {workspace = true}
clap = {workspace = true}
rustyline = { version = "15.0.0", features = ["derive"] }
petgraph = "0.7.1"
llvm-sys = {version = "181",features = ["prefer-dynamic"]}
