[package]
name = "simple_debugger"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[dependencies]
remu_macro = { path = "../remu_macro" }
remu_utils = { path = "../remu_utils" }
remu_buildin = { path = "../remu_buildin" }
logger = { path = "../logger" }
option_parser = { path = "../option_parser" }
state = { path = "../state" }
simulator = { path = "../simulator" }
owo-colors = {workspace = true}
snafu = {workspace = true}
clap = {workspace = true}
petgraph = {workspace = true}
lazy_static = {workspace = true}
tokio = {workspace = true}
rustyline = { version = "15.0.0", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["termion"] }
tui-textarea = "0.7.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
pest = {workspace = true}
pest_derive = {workspace = true}
