[package]
name = "simulator"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]
build = "build.rs"

[dependencies]
remu_macro = { path = "../remu_macro" }
remu_utils = { path = "../remu_utils" }
logger = { path = "../logger" }
state = { path = "../state" }
option_parser = { path = "../option_parser" }
enum_dispatch = {workspace = true}
snafu = {workspace = true}
owo-colors = {workspace = true}
bitflags = {workspace = true}
clap = {workspace = true}
petgraph = {workspace = true}
dlopen2 = "0.7.0"
once_cell = "1.21.3"
ctrlc = "3.4.5"

[build-dependencies]
bindgen = "0.71.1"
