[package]
name = "simulator"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[dependencies]
remu_macro = { path = "../remu_macro" }
remu_utils = { path = "../remu_utils" }
remu_buildin = { path = "../remu_buildin" }
logger = { path = "../logger" }
state = { path = "../state" }
option_parser = { path = "../option_parser" }
enum_dispatch = {workspace = true}
snafu = {workspace = true}
owo-colors = {workspace = true}
bitflags = {workspace = true}
clap = {workspace = true}
petgraph = {workspace = true}
cfg-if = {workspace = true}
comfy-table = {workspace = true}
dlopen2 = "0.8.0"
once_cell = "1.21.3"
ctrlc = "3.4.7"
csv = "1.3.1"
pest = {workspace = true}
pest_derive = {workspace = true}

[build-dependencies]
remu_feature = { path = "../remu_feature" }

[features]
ITRACE = []
