[package]
name = "state"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[dependencies]
remu_macro = { path = "../remu_macro" }
remu_utils = { path = "../remu_utils" }
logger = { path = "../logger" }
enum_dispatch = {workspace = true}
snafu = {workspace = true}
owo-colors = {workspace = true}
bitflags = {workspace = true}
petgraph = {workspace = true}
