[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
remu_macro = { path = "../../remu_macro" }
remu_types = { path = "../../remu_types" }

clap = { workspace = true, features = ["derive", "std"] }
winnow.workspace = true

[lints]
workspace = true
