[package]
name = "remu_app_mnist_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["accesskit", "default_fonts", "wayland", "web_screen_reader", "wgpu_no_default_features", "x11", "__screenshot"] }
wgpu = { version = "29", features = ["vulkan"] }
env_logger = "0.11.10"

[lints]
workspace = true
